@@ -1,5 +1,10 @@
 2012-02-09  Nick Alcock  <nick.alcock@oracle.com>
 
+	* runtest.sh: Detect failures due to out-of-memory conditions, and
+	turn them into relatively easy-to-ignore XFAILs.
+
+2012-02-09  Nick Alcock  <nick.alcock@oracle.com>
+
 	Fixes for improved test reproducibility under load.
 
 	* test/triggers/open.c: New trigger, call open().
